# challenges

./: Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: aoc2018.yml  aoc2019.yml  backend.yml
advent_of_code_2018/: README.md  day01.sh  day01_test.bats  day02.sh  day02_test.bats  day03.sh  day03_test.bats  day04.sh  day04_test.bats  server.sh  server_internal.bats  server_internal.sh
advent_of_code_2018/lib/: string.sh  string_test.bats
advent_of_code_2019/: day01.go  day01_test.go  day02.go  day02_test.go  day03.go  day03_test.go  day04.go  day04_test.go  day05.go  day05_test.go  day06.go  day06_test.go  day07.go  day07_test.go  day08.go  day08_test.go  day09.go  day09_test.go  day10.go  day10_test.go  day11.go  day11_test.go  day12.go  day12_test.go  go.mod  go.sum  intcode.go  main.go  point.go  point_test.go  utils.go
backend/: Cargo.toml
backend/src/groups/: api_group_config.rs  challenge_config.rs  group_config.rs  group_manager.rs  mod.rs
backend/src/groups/advent_of_code_2019/: config.rs
backend/src/groups/advent_of_code_2020/: config.rs  day01.rs  day05.rs  day08.rs  day10.rs  day11.rs  day16.rs  day20.rs  day22.rs  day24.rs
backend/src/groups/project_euler/: challenge0001.rs  config.rs
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  SpacingGrid.tsx
frontend/src/api/: Api.tsx
frontend/src/components/: BoxGrid.tsx
frontend/src/views/: Challenge.tsx  Group.tsx  Groups.tsx
src/: lib.rs  main.rs  utils.rs
src/groups/: challenge_config.rs  group_config.rs  group_manager.rs  mod.rs
src/groups/advent_of_code_2019/: config.rs  day01.go  day01.rs  main.go  mod.rs
src/groups/advent_of_code_2020/: mod.rs  (+26 more)
(+3 files in other folders)
