[package]
name = "challenges-rust-cli"
version = "0.1.0"
authors = ["Julien Duchesne <julienduchesne@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.cursive]
version = "0.15"
default-features = false
features = ["pancurses-backend"]