[package]
name = "challenges-rust-cli"
version = "0.1.0"
authors = ["Julien Duchesne <julienduchesne@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
rstest = "0.6.4"

[dependencies]
lazy_static = "1.4.0"
maplit = "1.0.2"
regex = "1"
serde_json = "1.0.59"

[dependencies.cursive]
version = "0.15"
default-features = false
features = ["pancurses-backend"]