[package]
name = "challenges"
version = "0.1.0"
authors = ["Julien Duchesne <julienduchesne@live.com>"]
edition = "2018"

[[bin]]
name = "terminal"
path = "src/bin/terminal/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
rstest = "0.6.4"

[dependencies]
anyhow = "1.0.35"
lru = "0.6.2"
itertools = "0.9.0"
lazy_static = "1.4.0"
maplit = "1.0.2"
petgraph = "0.5.1"
modinverse = "0.1.1"
ndarray = "0.14.0"
num-integer = "0.1.44"
rand = "0.8.0"
regex = "1"
rocket = "0.4.6"
rocket_contrib = "0.4.6"
rocket_cors = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dependencies.cursive]
version = "0.15"
default-features = false
features = ["pancurses-backend"]